[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orqflow"
version = "0.1.0"
description = "Autonomous Multi-Agent AI Orchestration Platform"
authors = [
    {name = "Akshansh Ranjan", email = "akshanshranjan0519@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
